Adiciona código do AdSense na página inicial

--- a/cadastros/templates/index.html
+++ b/cadastros/templates/index.html
@@ -6,6 +6,8 @@
 
 {% block Conteudo %}
     <head>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5451545777538942"
+     crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     </head>
